add codes into idex.html and app.js 4

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <h1>git pratice</h1>
     <h1>git pratice</h1>
     <h1>git pratice</h1>
-
+    <h1>git pratice</h1>
+    <h1>git pratice</h1>
 </body>
 </html>
